[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "origin-time-renamer"
version = "0.1.0"
description = "Timezone-aware photo/video renamer using origin metadata timestamps"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
origin-time-renamer = "origin_time_renamer.cli:main"

[tool.setuptools]
packages = ["origin_time_renamer"]

